--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
     "python.linting.enabled": false,
+    "python.pythonPath": "C:\\Users\\70716523\\AppData\\Local\\Programs\\Python\\Python36\\",
 }
